=== HEAD

* When loading multiple pg_* extensions via Database#extension, only reset the conversion procs once (jeremyevans)

* Don't allow model typecasting from string to postgres array, hstore, or composite types (jeremyevans)

* Add pg_typecast_on_load plugin for converting advanced PostgreSQL types on load the {jdbc,do,swift}/postgres adapters (jeremyevans)

* Make all adapters that connect to PostgreSQL store type conversion procs (jeremyevans)

* Add type oid to column schema on PostgreSQL (jeremyevans)

* Add pg_row plugin, for using Sequel::Model classes to represent PostgreSQL row-valued/composite types (jeremyevans)

* Add pg_row_ops extension for DSL support for PostgreSQL row-valued/composite types (jeremyevans)

* Add pg_row extension for dealing with PostgreSQL row-valued/composite types (jeremyevans)

* Allow custom registered array types in the pg_array extension to be Database instance specific (jeremyevans)

* Remove Sequel::SQL::IdentifierMethods (jeremyevans)

* Don't have the schema_dumper extension produce code that relies on the core_extensions (jeremyevans)

* Fix dropping of columns with constraints on Microsoft SQL Server (mluu, jeremyevans) (#515, #518)

* Don't have pg_* extensions add methods to core classes unless the core_extensions extension is loaded (jeremyevans)

* Use real boolean literals on derby 10.7+ (jeremyevans, matthauck) (#514)

* Work around JRuby 1.6 ruby 1.9 mode bug in Time#nsec for Time prepared statement arguments on jdbc (jeremyevans)

* Handle blob prepared statement arguments on jdbc/db2 and jdbc/oracle (jeremyevans)

* Handle blob values in the swift adapter (jeremyevans)

* Handle better nil prepared statement arguments on jdbc (jeremyevans) (#513)

* Make SQL::Blob objects handle as, cast, and lit methods even if the core extensions are not loaded (jeremyevans)

* Make #* with no arguments produce a ColumnAll for Identifier and QualifiedIdentifier (jeremyevans)
