@@ -1,5 +1,7 @@
 === HEAD
 
+* Add Model#to_hash as an alias to Model#values (jeremyevans)
+
 * When loading multiple pg_* extensions via Database#extension, only reset the conversion procs once (jeremyevans)
 
 * Don't allow model typecasting from string to postgres array, hstore, or composite types (jeremyevans)
